--- a/TravelApp/SlideUpView/SlideUpCollectionViewCell.xib
+++ b/TravelApp/SlideUpView/SlideUpCollectionViewCell.xib
@@ -12,55 +12,36 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="slideCollectionCell" id="gTV-IL-0wX" customClass="SlideUpCollectionViewCell" customModule="TravelApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+            <rect key="frame" x="0.0" y="0.0" width="100" height="121"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                <rect key="frame" x="0.0" y="0.0" width="100" height="121"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NE4-Oz-cXW">
-                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                        <rect key="frame" x="0.0" y="0.0" width="100" height="121"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jbK-Is-wcV">
-                                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                <rect key="frame" x="0.0" y="0.0" width="100" height="90"/>
                             </imageView>
-                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lus-h8-XDX">
-                                <rect key="frame" x="0.0" y="60" width="100" height="40"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="kL2-Q1-bMZ">
-                                    <rect key="frame" x="0.0" y="0.0" width="100" height="40"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fkd-RA-8rX">
-                                            <rect key="frame" x="0.0" y="0.0" width="100" height="40"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="40" id="BZ4-xz-Gnx"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstItem="fkd-RA-8rX" firstAttribute="leading" secondItem="kL2-Q1-bMZ" secondAttribute="leading" id="IUe-rg-7gG"/>
-                                        <constraint firstItem="fkd-RA-8rX" firstAttribute="width" secondItem="kL2-Q1-bMZ" secondAttribute="width" id="O6V-1I-aXX"/>
-                                        <constraint firstAttribute="bottom" secondItem="fkd-RA-8rX" secondAttribute="bottom" id="QE5-Lh-tc8"/>
-                                    </constraints>
-                                </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yqe-Iv-YdH">
+                                <rect key="frame" x="3" y="91" width="94" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="u0P-LF-D4v"/>
+                                    <constraint firstAttribute="height" constant="30" id="kME-ZD-Fi0"/>
                                 </constraints>
-                                <blurEffect style="dark"/>
-                            </visualEffectView>
+                                <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="lus-h8-XDX" firstAttribute="bottom" secondItem="jbK-Is-wcV" secondAttribute="bottom" id="8en-eE-qXc"/>
-                            <constraint firstAttribute="bottom" secondItem="jbK-Is-wcV" secondAttribute="bottom" id="8fS-MN-VDx"/>
-                            <constraint firstItem="lus-h8-XDX" firstAttribute="trailing" secondItem="jbK-Is-wcV" secondAttribute="trailing" id="o4G-Pj-acb"/>
+                            <constraint firstAttribute="bottom" secondItem="jbK-Is-wcV" secondAttribute="bottom" constant="31" id="8fS-MN-VDx"/>
+                            <constraint firstItem="yqe-Iv-YdH" firstAttribute="leading" secondItem="NE4-Oz-cXW" secondAttribute="leading" constant="3" id="OvK-Ao-lP3"/>
+                            <constraint firstAttribute="bottom" secondItem="yqe-Iv-YdH" secondAttribute="bottom" id="Rwy-Ka-D3W"/>
                             <constraint firstAttribute="trailing" secondItem="jbK-Is-wcV" secondAttribute="trailing" id="pU8-Po-9bv"/>
                             <constraint firstItem="jbK-Is-wcV" firstAttribute="top" secondItem="NE4-Oz-cXW" secondAttribute="top" id="q9F-cF-yU4"/>
-                            <constraint firstItem="lus-h8-XDX" firstAttribute="leading" secondItem="jbK-Is-wcV" secondAttribute="leading" id="siK-Fv-oBB"/>
+                            <constraint firstAttribute="trailing" secondItem="yqe-Iv-YdH" secondAttribute="trailing" constant="3" id="tvD-dE-8Ww"/>
                             <constraint firstItem="jbK-Is-wcV" firstAttribute="leading" secondItem="NE4-Oz-cXW" secondAttribute="leading" id="wpo-qJ-S6t"/>
                         </constraints>
                     </view>
@@ -72,11 +53,12 @@
                 <constraint firstAttribute="bottom" secondItem="NE4-Oz-cXW" secondAttribute="bottom" id="b2V-bq-KOz"/>
                 <constraint firstItem="NE4-Oz-cXW" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="oGN-Mk-61Z"/>
             </constraints>
+            <size key="customSize" width="100" height="121"/>
             <connections>
                 <outlet property="imageView" destination="jbK-Is-wcV" id="66k-ID-CZ0"/>
-                <outlet property="titleLabel" destination="fkd-RA-8rX" id="LxV-5a-OOd"/>
+                <outlet property="titleLabel" destination="yqe-Iv-YdH" id="26T-n7-VVw"/>
             </connections>
-            <point key="canvasLocation" x="-14" y="13"/>
+            <point key="canvasLocation" x="-14" y="23.5"/>
         </collectionViewCell>
     </objects>
 </document>
